Fixed alignment of header, added background

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -36,12 +36,24 @@ html,
 body {
   height: 100%;
   background-color: #333;
+    /* Safari 4-5, Chrome 1-9 */
+  /* Can't specify a percentage size? Laaaaaame. */
+  background: -webkit-gradient(radial, center center, 0, center center, 460, from(#6d6767), to(#333));
+
+  /* Safari 5.1+, Chrome 10+ */
+  background: -webkit-radial-gradient(circle, #6d6767, #333);
+
+  /* Firefox 3.6+ */
+  background: -moz-radial-gradient(circle, #6d6767, #333);
+
+  /* IE 10 */
+  background: -ms-radial-gradient(circle, #6d6767, #333);
 }
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  /*box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -69,6 +81,10 @@ body {
 /*
  * Header
  */
+.masthead {
+  background: rgba(0,0,0,0.5);
+  width: 100%;
+}
 .masthead-brand {
   font-weight: normal;
   /*margin-top: 10px;*/
@@ -90,7 +106,6 @@ body {
   padding-left: 0;
   line-height: 4;
   font-size: 16px;
-  /*font-weight: bold;*/
   font-family: 'Montserrat', sans-serif;
   color: #fff; /* IE8 proofing */
   color: rgba(255,255,255,.75);
@@ -124,7 +139,6 @@ body {
 
 .cover {
   padding: 0 20px;
-  background: (0,0,0);
 }
 .cover .btn-lg {
   padding: 10px 20px;
@@ -134,12 +148,14 @@ body {
   font-weight: bold;
   font-family: 'Ovo', serif;
   font-size: 80px;
+  padding-top: 30px;
   padding-bottom: 15px;
 }
 .cover-sub-head {
   font-weight: bold;
   font-family: 'Ovo', serif;
   font-size: 60px;
+  padding-top: 30px;
   padding-bottom: 15px;
 }
 .lead {
@@ -178,17 +194,17 @@ body {
 /*  .masthead {
     position: fixed;
     top: 0;
-  }
+  }*/
   .mastfoot {
     position: fixed;
     bottom: 0;
-  }*/
+  }
   /* Start the vertical centering */
  /* .site-wrapper-inner {
     vertical-align: middle;
   }*/
+
   /* Handle the widths */
-  .masthead,
   .mastfoot,
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
@@ -196,7 +212,6 @@ body {
 }
 
 @media (min-width: 992px) {
-  .masthead,
   .mastfoot,
   .cover-container {
     width: 700px;
